# Venom-SportyBeavers

./: README.md
backend/: README.md  docker-compose.yaml  pyproject.toml
backend/app/: .env.example  Dockerfile  main.py
backend/app/core/: database.py
backend/app/core/models/: model.py
backend/app/core/schemas/: schema.py
backend/app/utils/: main_utils.py
backend/app/v1/: crud.py
backend/app/v1/routers/: battles.py  beavers.py  deps.py  lootboxes.py  onboardings.py  users.py  whacks.py
blockchain/: locklift.config.ts  package-lock.json  package.json
blockchain/contracts/: SportsBeavers.tsol
blockchain/scripts/: 1-call-transfer.ts  1-deploy-sportsbeavers.ts  1-deploy-tokenroot.ts
frontend/: package.json
frontend/public/: index.html
frontend/public/fonts/NeueMachina/: stylesheet.css
frontend/public/fonts/Roboto/: stylesheet.css
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/api/sporty/: sporty-api.service.ts
frontend/src/components/battle-moves/: BattleMoves.css  BattleMoves.tsx
frontend/src/components/battle-properties/: BattleProperties.css  BattleProperties.tsx
frontend/src/components/beaver-detail-buttons/: BeaverDetailButtons.css  BeaverDetailButtons.tsx
frontend/src/components/beaver-detail-points/: BeaverDetailPoints.css  BeaverDetailPoints.tsx
frontend/src/components/beaver-detail-properties/: BeaverDetailProperties.css  BeaverDetailProperties.tsx
frontend/src/components/beaver-item/: BeaverItem.css  BeaverItem.tsx
frontend/src/components/beavers/: Beavers.css  Beavers.tsx
frontend/src/pages/main/: Main.tsx
(+129 files in other folders)
